# financial-planner

./: .gitignore  README.md  certification_challenge_documentation.md  next_steps.md  project_build.md  requirements-dev.txt  requirements.txt  vercel.json
backend/: pyproject.toml  ralph
backend/agents/: __init__.py  calc_client.py  financial_agent.py  llm_factory.py  memory_types.py  playbooks.py  presentation_tools.py  rag_pipeline.py  strategic_tools.py  tools.py
backend/api/: index.py
backend/data/advertising/: digital_ads_strategy.txt
backend/data/amazon_selling/: amazon_strategy.txt
backend/data/financial_glossary/: business_terms.txt  cfo_ai_full_production_training_suite.md  master_cfo_knowledge.md  (+2 more)
backend/docs/: final_assignment_requirements.md  project_proposal.md  rag_requirements.md
backend/evals/: __init__.py  agent_evals.py  rag_evals.py  run_evals.py
backend/integration_tests/: __init__.py  conftest.py  test_copy_spreadsheet.py  test_sheets_perform_sensitivity_analysis.py  test_sheets_utilities.py  test_sheets_utilities_changes.py  test_slides_utilities.py
backend/notebooks/: final_assignment.ipynb
backend/shared/: __init__.py  config.py  evaluations.py  generate_testset.py  scrape_data.py  sensitivity_analysis.py  sheets_utilities.py  slides_utilities.py
backend/test_data/: manual_test_cases.json
backend/tests/: __init__.py  conftest.py  test_api.py  test_evals.py  test_evaluations.py  test_goal_seek_agent.py  test_memory_types.py  test_planner_agent.py  test_playbooks.py  test_rag_pipeline.py  test_recall_agent.py  test_tools.py
(+59 files in other folders)
